# ohtu-2021

viikko1/nhl-statistics-1/src/: index.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/: haara2.txt
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  pankki.py  varasto.py
viikko3/login-robot/src/: AppLibrary.py
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  playerreader.py  playerstats.py
viikko3/web-login-robot/src/: AppLibrary.py
viikko4/int-joukko/src/: index.py  int_joukko.py
viikko4/tennis/src/: tennis_game.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/htmlcov/: index.html  src_index_py.html  src_kauppa_py.html  src_kirjanpito_py.html  src_ostoskori_py.html  src_pankki_py.html  src_tests___init___py.html  src_tests_kauppa_test_py.html  src_tuote_py.html  src_varasto_py.html  src_viitegeneraattori_py.html  status.json
viikko5/: retro.md
viikko5/laskin/src/: kayttoliittyma.py
viikko6/query-language/: pyproject.toml
viikko6/query-language/src/: index.py  matchers.py  player.py  player_reader.py  statistics.py
viikko7/kivi-paperi-sakset/: .gitignore  pyproject.toml
viikko7/kivi-paperi-sakset/src/: index.py  kps.py  kps_parempi_tekoaly.py  kps_pelaaja_vs_pelaaja.py  kps_tehdas.py  kps_tekoaly.py  tekoaly.py  tekoaly_parannettu.py  tuomari.py
(+7 files in other folders)
