[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Meri Rajamäki <meri.rajamaki@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
